--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Compile CSS and Javascript
         run: |
           npm install
-          npm run prod
+          npm run dev
