--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -23,4 +23,12 @@ jobs:
       - name: Compile CSS and Javascript
         run: |
           npm install
-          npm run dev
+        # npm run dev
+      - name: Configure PHP 8.2
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
+      - name: Composer Install
+        run: |
+          composer install --no-dev --no-interaction --prefer-dist
