adding upload process

--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -17,6 +17,9 @@ jobs:
     name: Create Depolyment Artifacts
     runs-on: ubuntu-latest
     
+    outputs:
+      DEPLOYMENT_MATRIX: ${{ steps.export-deployment-matrix.outputs.DEPLOYMENT_MATRIX }}
+    
     steps:
       - name: Checkout The Repository
         uses: actions/checkout@v3
@@ -32,3 +35,22 @@ jobs:
       - name: Composer Install
         run: |
           composer install --no-dev --no-interaction --prefer-dist
+      - name: Create deployment artifact
+        # run: tar -czf app.tar.gz --exclude=*.git --exclude=node_modules --exclude=tests *
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+        run: tar -czf "${ GITHUB_SHA }".tar.gz --exclude=*.git --exclude=node_modules *
+      - name: Store artifact for distribution
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-build
+          path: ${{ github.sha }}.tar.gz 
+      - name: Export deployment matrix
+        id: export-deployment-matrix
+        run: |
+          delimiter="$(openssl rand -hex 8)"
+          JSON="$(cat ./.github/workflows/servers.json)"
+          echo "DEPLOYMENT_MATRIX<<${delimiter}" >> "${GITHUB_OUTPUT}"
+          echo "$JSON" >> "${GITHUB_OUTPUT}"
+          echo "${delimiter}" >> "${GITHUB_OUTPUT}"
+        
