--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -36,10 +36,13 @@ jobs:
         run: |
           composer install --no-dev --no-interaction --prefer-dist
       - name: Create deployment artifact
-        # run: tar -czf app.tar.gz --exclude=*.git --exclude=node_modules --exclude=tests *
         env:
           GITHUB_SHA: ${{ github.sha }}
-        run: tar -czf "${ GITHUB_SHA }".tar.gz --exclude=*.git --exclude=node_modules *
+        run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules *
+        # run: tar -czf app.tar.gz --exclude=*.git --exclude=node_modules --exclude=tests *
+        # env:
+        #   GITHUB_SHA: ${{ github.sha }}
+        # run: tar -czf "${ GITHUB_SHA }".tar.gz --exclude=*.git --exclude=node_modules *
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v3
         with:
