fix  Error reading JToken from JsonReader

--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -52,7 +52,8 @@ jobs:
         id: export-deployment-matrix
         run: |
           delimiter="$(openssl rand -hex 8)"
-          JSON="$(cat ./.github/workflows/servers.json)"
+        # JSON="$(cat ./.github/workflows/servers.json)"
+          JSON="$(cat ./deployment-config.json)"
           echo "DEPLOYMENT_MATRIX<<${delimiter}" >> "${GITHUB_OUTPUT}"
           echo "$JSON" >> "${GITHUB_OUTPUT}"
           echo "${delimiter}" >> "${GITHUB_OUTPUT}"
