--- a/deployment-config.json
+++ b/deployment-config.json
@@ -6,6 +6,6 @@
         "port": "22",
         "beforeHooks": "",
         "afterHooks": "",
-        "path": ""
+        "path": "/var/www/html"
     }
 ]
