--- a/.github/workflows/depoly_copy.yml
+++ b/.github/workflows/depoly_copy.yml
@@ -1,5 +1,5 @@
 # workflows name show in action tag
-name: Depoly Application
+name: Copy Depoly Application
 
 run-name: Depoly
 
@@ -39,6 +39,10 @@ jobs:
         env:
           GITHUB_SHA: ${{ github.sha }}
         run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules *
+        # run: tar -czf app.tar.gz --exclude=*.git --exclude=node_modules --exclude=tests *
+        # env:
+        #   GITHUB_SHA: ${{ github.sha }}
+        # run: tar -czf "${ GITHUB_SHA }".tar.gz --exclude=*.git --exclude=node_modules *
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v3
         with:
@@ -48,7 +52,8 @@ jobs:
         id: export-deployment-matrix
         run: |
           delimiter="$(openssl rand -hex 8)"
-          JSON="$(cat ./.github/workflows/servers.json)"
+        # JSON="$(cat ./.github/workflows/servers.json)"
+          JSON="$(cat ./deployment-config.json)"
           echo "DEPLOYMENT_MATRIX<<${delimiter}" >> "${GITHUB_OUTPUT}"
           echo "$JSON" >> "${GITHUB_OUTPUT}"
           echo "${delimiter}" >> "${GITHUB_OUTPUT}"
