--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -13,66 +13,28 @@ on:
         default: main
         
 jobs:
-  create-deployment-artifacts:
-    name: Create Depolyment Artifacts
+  depoly:
     runs-on: ubuntu-latest
     
-    outputs:
-      DEPLOYMENT_MATRIX: ${{ steps.export-deployment-matrix.outputs.DEPLOYMENT_MATRIX }}
-    
     steps:
+      # step1
       - name: Checkout The Repository
         uses: actions/checkout@v3
-      - name: Compile CSS and Javascript
-        run: |
-          npm install
-        # npm run dev
-      - name: Configure PHP 8.2
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
-      - name: Composer Install
-        run: |
-          composer install --no-dev --no-interaction --prefer-dist
-      - name: Create deployment artifact
-        env:
-          GITHUB_SHA: ${{ github.sha }}
-        run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules *
-      - name: Store artifact for distribution
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-build
-          path: ${{ github.sha }}.tar.gz 
-      - name: Export deployment matrix
-        id: export-deployment-matrix
-        run: |
-          delimiter="$(openssl rand -hex 8)"
-          JSON="$(cat ./deployment-config.json)"
-          echo "DEPLOYMENT_MATRIX<<${delimiter}" >> "${GITHUB_OUTPUT}"
-          echo "$JSON" >> "${GITHUB_OUTPUT}"
-          echo "${delimiter}" >> "${GITHUB_OUTPUT}"
-          
-  prepare-release-on-servers:
-    name: "${{ matrix.server.name }}: Prepare release"
-    runs-on: ubuntu-latest
-    needs: create-deployment-artifacts
-    strategy:
-      matrix:
-        server: ${{ fromJson(needs.create-deployment-artifacts.outputs.DEPLOYMENT_MATRIX) }}
         
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
+      # step2
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          name: app-build
-      - name: Upload the artifact to the server
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ matrix.server.ip }}
-          username: ${{ matrix.server.username }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ matrix.server.port }}
-          source: ${{ github.sha }}.tar.gz
-          target: ${{ matrix.server.path }}/artifacts
-        
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secrets-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      
+      # step3
+      - name: Create Codedepoly for Deployment
+        id: depoly
+        run: |
+          aws depoly create-deployment
+          --application-name laravel-app-sample
+          --deployment-group-name laravel-sample-gp-name
+          --deployment-config-name CodeDepolyDefault.OneAtAtime
+          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
