--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Create CodeDeploy for Deployment
         id: deploy
         run: |
-          aws deploy create-deployment
-          --application-name laravel-app-sample
-          --deployment-group-name laravel-sample-gp-name
-          --deployment-config-name CodeDeployDefault.OneAtAtime
+          aws deploy create-deployment \
+          --application-name laravel-app-sample \
+          --deployment-group-name laravel-sample-gp-name \
+          --deployment-config-name CodeDeployDefault.OneAtAtime \
           --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
